--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>mybudget0123</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>GWT Maven Archetype</name>
+  <name>MyBudget0123</name>
 
   <properties>
     <!-- Convenience property to set the GWT version -->
@@ -111,7 +111,7 @@
         </configuration>
       </plugin>
     </plugins>
-    
+
     <pluginManagement>
             <plugins>
                 <plugin>
