--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>dataProvider</servlet-name>
-    <servlet-class>org.fortytwo.developer.mybudget0123.server.DataProviderImpl</servlet-class>
+    <servlet-class>org.fortytwo.developers.mybudget0123.server.DataProviderImpl</servlet-class>
   </servlet>
 
   <servlet-mapping>
