stub for login and welcome

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,17 @@
 
   <servlet-mapping>
     <servlet-name>dataProvider</servlet-name>
-    <url-pattern>/MyBudget0123/data</url-pattern>
+    <url-pattern>data</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>loginService</servlet-name>
+    <servlet-class>org.fortytwo.developers.mybudget0123.server.LoginServiceImpl</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>loginService</servlet-name>
+    <url-pattern>MyBudget0123/login</url-pattern>
   </servlet-mapping>
 
   <!-- Default page to serve -->
