--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <!-- POM file generated with GWT webAppCreator -->
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.fortytwo.developer</groupId>
+  <groupId>org.fortytwo.developers</groupId>
   <artifactId>mybudget0123</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -70,8 +70,8 @@
             <goals>
               <goal>compile</goal>
               <goal>test</goal>
-              <goal>i18n</goal>
-              <goal>generateAsync</goal>
+              <!--<goal>i18n</goal>
+              <goal>generateAsync</goal>-->
             </goals>
           </execution>
         </executions>
@@ -80,7 +80,7 @@
         <configuration>
           <runTarget>MyBudget0123.html</runTarget>
           <hostedWebapp>${webappDirectory}</hostedWebapp>
-          <i18nMessagesBundle>org.fortytwo.developer.mybudget0123.client.Messages</i18nMessagesBundle>
+          <i18nMessagesBundle>org.fortytwo.developers.mybudget0123.client.Messages</i18nMessagesBundle>
         </configuration>
       </plugin>
 
