--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
   <name>MyBudget0123</name>
 
   <properties>
+    <!-- Convenience property to set the GAE version -->
+    <gaeVersion>1.8.1.1</gaeVersion>
     <!-- Convenience property to set the GWT version -->
     <gwtVersion>2.5.1</gwtVersion>
     <!-- GWT needs at least java 1.5 -->
@@ -21,6 +23,49 @@
   </properties>
 
   <dependencies>
+    <!-- Google App Engine libraries -->
+      <dependency>
+         <!-- this library provides the core appengine features -->
+         <groupId>com.google.appengine</groupId>
+         <artifactId>appengine-api-1.0-sdk</artifactId>
+         <version>${gaeVersion}</version>
+      </dependency>
+      <dependency>
+         <!-- this library provides experimental appengine features -->
+         <groupId>com.google.appengine</groupId>
+         <artifactId>appengine-api-labs</artifactId>
+         <version>${gaeVersion}</version>
+      </dependency>
+      <dependency>
+         <!-- required for app engine based unit tests -->
+         <groupId>com.google.appengine</groupId>
+         <artifactId>appengine-testing</artifactId>
+         <version>${gaeVersion}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <!-- required for app engine based unit tests -->
+         <groupId>com.google.appengine</groupId>
+         <artifactId>appengine-api-stubs</artifactId>
+         <version>${gaeVersion}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <!-- required for app engine based unit tests -->
+         <groupId>com.google.appengine</groupId>
+         <artifactId>appengine-tools-sdk</artifactId>
+         <version>${gaeVersion}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <!-- Google App Engine supports both JPA1 and JPA2.
+	      JPA1: datanucleus appengine plugin v1 (1.0.10) + datanucleus v1 (1.1.5)
+	      JPA2: datanucleus appengine plugin v2 (2.1.1) + datanucleus v3 (3.1.1) -->
+         <groupId>com.google.appengine.orm</groupId>
+         <artifactId>datanucleus-appengine</artifactId>
+         <version>2.1.1</version>
+      </dependency>
+      <!-- GWT Dependencies -->
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-servlet</artifactId>
