--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,6 @@
 			<artifactId>datanucleus-appengine</artifactId>
 			<version>2.1.2</version>
 		</dependency>
-		<dependency>
-			<groupId>com.google.appengine.orm</groupId>
-			<artifactId>datanucleus-appengine</artifactId>
-			<version>2.1.2</version>
-		</dependency>
 		<!-- End Google App Engine libraries -->
 		<!-- GWT Dependencies -->
 		<dependency>
@@ -154,7 +149,7 @@
 					<!-- Normally the gwt maven plugin executes dev mode using a builtin 
 						jetty server. This config property instructs the gwt maven plugin to execute 
 						dev mode using the jetty server supplied by the appengine sdk. -->
-					<server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server>
+					<!-- <server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server> -->
 				</configuration>
 			</plugin>
 
